# galos

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: action.yml  ci.yml
.sqlx/: query-006822f6cda8ace1cc25308f109a9de5cec67f3f6b9f6b277143a465f4b5f3a6.json  query-13e7d9da55278048a486e755a4a57791b2d5747a41377c65539a7390a80d1282.json  query-2eb6b8457a35b9ebf20c442b96f121427791ceb4b51ce5eccf9d047e7421a67c.json  query-58d5ea52ce750c4ba809c4b1d7d7b00b6287d44d8b55231a4de4f6bcdd153953.json  query-74b33fd3ad7d48160896df01c7c1d2a44d45ebaa658b6fe5aeadff3cbe0e2a48.json  query-7feebdb43549fe680dac7a8c1618706d3a65ac198f0f62307ffa16877e6a6455.json  query-7ff9aa67a7bcb76a2710ccbccc859c605731204a111a09f1fba28b2cce456618.json  query-8dc7382b1493384ae20b02d0de341936b865c175e6d6a9e6883063d301ce2c66.json  query-a02c92cd2509c8e8f18d8f8feb273d16d9d1edb435bf0a0d13997e2a4501abcd.json  query-a4d4f43ae6dd8989d5e84559cf8fd303d972e464dd58623349fa4c11a3315893.json  query-b256195bb2da63c8c6466a7b6510cde26017b56fb5248882383e90e831042503.json  query-b6f3e3ef9c974dfde7274740eda444f778f2df95df1400bc90191daf86a30265.json  query-b7ddf3675b8494e7d0af97c91babe6dc0057aeba796c485ef86b1789c49c930f.json  query-ba12be810dec9a6e8bec4d65fd17dd6b24a23189741145132f6388775fa3b869.json  query-ba8b442f85af1ccf3c60a7e68fce6ace96bbeecb8fd0008b356f77c94245a60b.json  query-c9f09c4207b2cf95bb06df7b3308684140f245451d7e5c7b06006f3744733e24.json  query-eb05cfc43dd29191d45b9d6af1745fc02d6b788619bec328eb1e28c57715f6dd.json  query-fe0ee08a0b3b6fe14c01161834d96f6e46f8f824984bbcbcae16c212cd35f575.json
.zed/: tasks.json
galos-gui/: Cargo.toml
galos-gui/src/: main.rs
galos-server/: Cargo.toml
galos-server/src/: main.rs
galos-server/templates/: body.html  station.html  system.html  systems.html
galos_bot/: Cargo.toml
galos_db/: Cargo.toml  sqlx-data.json
galos_db/.sqlx/: query-0afbc0eb0bf992c1bc02dd9c5f317f09a839a9f468c591a03356cee2175a30b5.json  query-31ba4f016ad9a15990d3481e8e84fce6a28db307735f9133064c41c7f3a7bbd2.json  query-334df9691fb53de236324dec9c2d8c2a55ac8b1fe6142e1fe4236d4a9e4cc10f.json  query-424c44ee0d72c1a53c461d4c4e0417f67a16b43b512851a9def4048e4b72faab.json  query-4bfbbaa4335b32023520efb8f6589f7461af30fc5c1ced0883b75aa0d7968d9c.json  query-4c2cd24e2d973db4371e811528886684e1952a6cc992be3c39d572eb5373c622.json  query-4f0e76dd8486e45d54df3456e2b4b4c7a15b49e662191a73c53632051c73486a.json  query-59f54ff44a45db6be47ef31657b3adce36781f78219ebdbfc326723896f9d67b.json  query-7e9cd1fb57d0b89517dd6bf549fb95d50031989d55bb5b5d4f2b2d1db2821481.json  query-8560b3bc0c295e1e399cf5e1f08f5b231f6ef0b38032c8c4fd5e3bd7d25b44a4.json  query-9a7c30d5d491d580dee73c083505e19504e30b8c46846a0d0cc6f6efc269014b.json  query-a4d4f43ae6dd8989d5e84559cf8fd303d972e464dd58623349fa4c11a3315893.json  query-acd14a883e797d47328bd421283b435f51c3cca0e65f19232a8b55ba5b5efe83.json  query-c7c3de8b6b92857ad27ab79f76f511de366ade3fba82ac3df0113c6a87f97c4c.json  query-d3edf18376b3f50ab97239ec71384ba3b67c220136d26c745bfab234ca4b7aad.json  query-dc94b075824050c32fe8dd51259f40349f7839336b06ff2bc20b387616e126c3.json  query-df7bf7ba6c83d958ec6ca0e01d1c30e9b5dc885dee7bb335c6f5e5b2fe307f9e.json  query-e8c132eb9239d3c0ebcf3ec3e4e17ba36c00b46daa8c97c202e5099ec6173224.json  query-edf4972bac4501627ea224a803c19cf78255243819afe222e16c0c0075189b52.json  query-ee8c588dbb247bc9514acba685d817624f5368a7065ea2cb068c922d5f7349f8.json  query-f36dc7ca2e4572d5707f77c996b67728d2227bcc94113ccb9ce64540eb47db67.json
galos_db/examples/: articles.rs  listen.rs  stations.rs  systems.rs
galos_db/migrations/: 20210211165501_create_articles.down.sql  20210211165501_create_articles.up.sql  20210223205526_create_systems.down.sql  20210223205526_create_systems.sql  20210223205526_create_systems.up.sql  20210225020402_create_factions.down.sql  20210225020402_create_factions.sql  20210225020402_create_factions.up.sql  20210227192246_create_system_faction_influences.down.sql  20210227192246_create_system_faction_influences.sql  20210308032802_create_conflicts.down.sql  20210308032802_create_conflicts.up.sql  20210310143218_create_system_faction_states.down.sql  20210310143218_create_system_faction_states.up.sql  20210321042750_index_systems_position.down.sql  20210321042750_index_systems_position.up.sql  20220129124500_create_bodies.down.sql  20220129124500_create_bodies.sql  20240809210548_create_stations.down.sql  20240809210548_create_stations.sql  20240817174503_create_markets.down.sql  20240817174503_create_markets.sql  20240817174503_create_markets.up.sql  20240913185355_create_stars.down.sql  20240913185355_create_stars.sql  20240913185355_create_stars.up.sql  20240914164236_create_systems_notify.down.sql  20240914164236_create_systems_notify.up.sql  20240920171800_add_star_class_to_systems.down.sql  20240920171800_add_star_class_to_systems.up.sql
galos_db/sql/: conflicts.sql  cube.sql  govall.sql  influence.sql  listings.sql  near.sql  newp.sql  sol.sql  table_sizes.sql
galos_db/sql/stats/: economy.sql  power.sql
galos_db/src/: articles.rs  bodies.rs  error.rs  factions.rs  lib.rs  stations.rs  systems.rs
galos_db/src/articles/: create.rs  fetch.rs  mod.rs
galos_db/src/bodies/: create.rs  fetch.rs  mod.rs
galos_db/src/factions/: create.rs  fetch.rs  mod.rs
galos_db/src/markets/: create.rs  mod.rs
galos_db/src/stars/: create.rs  fetch.rs  mod.rs
galos_db/src/stations/: create.rs  fetch.rs  mod.rs
galos_db/src/systems/: create.rs  fetch.rs  mod.rs  nav.rs
galos_gui/: Cargo.toml
galos_gui/src/: app.rs  lib.rs
galos_map/: Cargo.toml  README.md
galos_map/src/: camera.rs  lib.rs  main.rs  search.rs  ui.rs
galos_server/: Cargo.toml
galos_server/templates/: index.html  route.html  station.html
src/: lib.rs  main.rs  route.rs  search.rs
src/sync/: eddb.rs  (+3 more)
starmap/: Cargo.toml
starmap/assets/shaders/: star.wgsl
starmap/src/: camera.rs  generate.rs  grid.rs  main.rs  search.rs  systems.rs  ui.rs
starmap/src/systems/: fetch.rs  labels.rs  mod.rs  route.rs  scale.rs  spawn.rs
starmap/src/systems/route/: fetch.rs  mod.rs  spawn.rs
(+8 files in other folders)
