[package]
name    = "galos"
version = "0.0.3"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

default-run = "galos"

[dependencies]
async-std = "*"
structopt = "*"
itertools = "*"
indicatif = "*"
chrono = "*"

[target.'cfg(unix)'.dependencies]
prettytable-rs = "*"
termion = "*"
tui = "*"

# Subcomponents of Galos.
galos_db      = { path = 'galos_db' }

# Our open source crates.
# elite_dat = { path = './elite_dat' }
elite_journal = { path = "./elite_journal" }
eddn          = { path = "./eddn" }
eddb          = { path = "./eddb" }
edsm          = { path = "./edsm" }

[patch.crates-io]
elite_journal = { path = "./elite_journal" }
eddn          = { path = "./eddn" }

[workspace]
members = [
    # "elite_dat",
    "elite_journal",
    "eddn",
    "eddb",
    "edsm",
    "galos_db",
    "starmap",
    # "galos-gui",
    "galos-server",
    # "galos-worker",
]
