[package]
name    = "galos"
version = "0.0.3"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

default-run = "galos"

[dependencies]
async-std = "*"
structopt = "*"
itertools = "*"
indicatif = "*"
chrono = "*"

eddb = { path = "./eddb" }
eddn = { path = "./eddn" }
edsm     = { path = "./edsm" }
galos_db = { path = "./galos_db" }
elite_journal = { path = "./elite_journal" }

[target.'cfg(unix)'.dependencies]
prettytable-rs = "*"
termion = "*"
tui = "*"

[patch.crates-io]
# elite_dat     = { path = './elite_dat' }
eddb          = { path = "./eddb" }
eddn          = { path = "./eddn" }
edsm          = { path = "./edsm" }
elite_journal = { path = "./elite_journal" }

# TODO
geozero = { git = "https://github.com/nixpulvis/geozero" }

[workspace]
members = [
    # "elite_dat",
    "elite_journal",
    "eddn",
    "eddb",
    "edsm",
    "galos_db",
    "starmap",
    # "galos-gui",
    "galos-server",
    # "galos-worker",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
