[package]
name = "galos-server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "*"
axum = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
galos_db = { path = "../galos_db" }
