[package]
name = "galos_db"
version = "0.0.2"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[dependencies]
# futures = "*"
async-std = { version = "*", features = [ "attributes" ] }
dotenv = "*"
chrono = "*"
pathfinding = "*"
ordered-float = "*"

[dependencies.sqlx]
version = "^0.6"
features = ["runtime-async-std-native-tls", "postgres", "chrono", "offline"]

[dependencies.geozero]
version = "^0.9"
features = ["with-wkb"]

[dependencies.elite_journal]
path = "../elite_journal"
features = ["with-postgis-sqlx"]
