[package]
name = "galos_db"
version = "0.0.3"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[dependencies]
# futures = "*"
async-std = { version = "*", features = [ "attributes" ] }
dotenv = "*"
chrono = "*"
pathfinding = "*"
ordered-float = "*"
elite_journal = { version = "0.1", features = ["with-postgis-sqlx"] }

[dependencies.sqlx]
version = "^0.7"
features = ["runtime-async-std-native-tls", "postgres", "chrono"]

[dependencies.geozero]
version = "^0.13"
features = ["with-wkb"]
