[package]
name = "galos_db"
version = "0.0.3"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[dependencies]
# futures = "*"
async-std = { version = "*", features = [ "attributes" ] }
dotenv = "*"
chrono = "*"
pathfinding = "*"
ordered-float = "*"
elite_journal = { path = "../elite_journal", features = ["with-postgis-sqlx"] }

[dependencies.sqlx]
version = "^0.8"
features = ["runtime-async-std-native-tls", "postgres", "chrono"]

[dependencies.geozero]
git = "https://github.com/nixpulvis/geozero"
features = ["with-wkb"]
