[package]
name = "starmap"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", features = ["shader_format_glsl"] }
bevy_infinite_grid = "*"
bevy_egui = "*"
bevy_mod_picking = "*"
async-std = "*"
galos_db = { path = "../galos_db" }
elite_journal = { path = "../elite_journal" }
