[package]
name = "starmap"
version = "0.0.3"
edition = "2021"

[features]
inspector = ["bevy-inspector-egui"]
tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = { version = "*", features = ["shader_format_glsl"] }
bevy_panorbit_camera = { version = "*", features = ["bevy_egui"] }
bevy_egui = "*"
bevy_mod_picking = "*"
async-std = "*"
galos_db = { path = "../galos_db" }
elite_journal = { path = "../elite_journal" }
bevy-inspector-egui = { version = "*", optional = true }
