[package]
name = "starmap"
version = "0.0.3"
edition = "2021"

[features]
inspector = ["bevy-inspector-egui"]
tracy = ["bevy/trace_tracy"]

[dependencies]
async-std = "*"
bevy = { version = "*", features = ["shader_format_glsl"] }
bevy-inspector-egui = { version = "*", optional = true }
bevy_egui = "*"
bevy_mod_billboard = "*"
bevy_mod_picking = "*"
bevy_panorbit_camera = { version = "*", features = ["bevy_egui"] }
elite_journal = { path = "../elite_journal" }
galos_db = { path = "../galos_db" }
